# e_com_games

./: .gitignore  manage.py  pyproject.toml  requirements.txt
e_com_store/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  context_processor.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_cart_cartitem.py  0003_order_orderitem.py  0004_remove_order_email_order_emailaddress.py  0005_review.py  0006_rename_review_review_content.py
store/static/css/: base.css  cart.css
store/templates/: about.html  base.html  cart.html  contact.html  contact_success.html  footer.html  home.html  navbar.html  orders_list.html  product.html  signin.html  signup.html  thank_you.html  view_order.html
store/templates/email/: email.html
