[tool.poetry]
name = "e-com-store-mod"
version = "0.1.0"
description = "e_commerce store model"
authors = ["prodhanm <mustafizur.prodhan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
stripe = "^8.10.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
